# stmm-input-xi

./: .gitignore  .gitmodules  CHANGES  INSTALL  README.md
device-floater/: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  device-floater-defs.cmake
device-floater/data/applications/: com.efanomars.device-floater.desktop  device-floater.desktop
device-floater/scripts/: install_device-floater.py  uninstall_device-floater.py
device-floater/src/: config.cc.in  config.h  devicefloater.cc  devicefloater.h  main.cc  xideviceswindow.cc  xideviceswindow.h
libstmm-input-gtk-xi/: .gitignore  90stmm-input-gtk-xi.dlp.in  AUTHORS  CMakeLists.txt  INSTALL  NEWS  README.md  stmm-input-gtk-xi-defs.cmake  stmm-input-gtk-xi.dlp.in  stmm-input-gtk-xi.pc.in
libstmm-input-gtk-xi/doc/: CMakeLists.txt
libstmm-input-gtk-xi/include/stmm-input-gtk-xi/: flogtkdevicemanager.h  libmain.h  stmm-input-gtk-xi-config.h  stmm-input-gtk-xi.h
libstmm-input-gtk-xi/scripts/: install_libstmm-input-gtk-xi.py  uninstall_libstmm-input-gtk-xi.py
libstmm-input-gtk-xi/src/: floatingsources.cc  floatingsources.h  flogtkbackend.cc  flogtkbackend.h  flogtkdevicemanager.cc  flogtklistenerextradata.cc  flogtklistenerextradata.h  flogtkwindowdata.cc  flogtkwindowdata.h  flogtkxkeyboarddevice.cc  flogtkxkeyboarddevice.h  libmain.cc  recycler.cc  recycler.h  stmm-input-gtk-xi-config.cc.in  stmm-input-gtk-xi.cc
libstmm-input-gtk-xi/test/: CMakeLists.txt  fakeflogtkbackend.cc  fakeflogtkbackend.h  fakeflogtkdevicemanager.h  fakeflogtkwindowdata.cc  fakeflogtkwindowdata.h  fixtureFloDM.h  fixtureGlibApp.h  fixtureTestBase.h  fixturevariantEventClasses.h  fixturevariantKeyRepeatMode.h  testFloGtkDeviceManager.cxx
scripts/: arch_create.py  checkcode.py  checktidy.py  debian_create.py  googletest_create_links.py  install_stmm-input-xi-all.py  sourcepackage.py  testall.py  uninstall_stmm-input-xi-all.py
scripts/priv/: checktidy.py  dd_install_stmm-input-xi-all.py  debian_src_versions.cmake  pk_install_stmm-input-xi-all.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  device-floater.1  device-floater.install  device-floater.manpages  libstmm-input-gtk-xi-dev.install  libstmm-input-gtk-xi@STMM_INPUT_GTK_XI_MAJOR_VERSION@.install.in  libstmm-input-gtk-xi@STMM_INPUT_GTK_XI_MAJOR_VERSION@.shlibs.in  rules
share/cmake/: CommonDoxy.cmake  CommonTesting.cmake  CommonUtil.cmake
share/doc/: docu-config.doxygen.in
